--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     height: 500px;
     width 500px;
     } </style> 
-    <title>website</title>
+    <title>kirby</title>
 </head>
 <body>
     <h1>KIRBY IS AMAZING</h1>
@@ -25,5 +25,4 @@
         <li>a star warrior</li>
 
     </o1>
-    <img src ="https://th.bing.com/th/id/R.afe192a3997001c9929355c25b010d0e?rik=0ten7zMe6cu3HA&riu=http%3a%2f%2fwww.game-art-hq.com%2fwp-content%2fuploads%2fKirby-SSB-WiiU-3DS-Art.jpg&ehk=iyo2Gg7hAwj%2f0zLIFKXUlXDdKMdCQd5eePEo0KAM4Ks%3d&risl=&pid=ImgRaw&r=0">
-</html>
+    <img src ="https://th.bing.com/th/id/R.55afeb8eb09c8848003e5ae89511fea8?rik=3htv3%2bjpZZKi3A&riu=http%3a%2f%2fwww.pngall.com%2fwp-content%2fuploads%2f2016%2f05%2fKirby-Free-Download-PNG.png&ehk=jzL8Pfbva5NzzS6Y%2fM4k5s5Deq639hKSf2Aq0hPwvxo%3d&risl=&pid=ImgRaw&r=0" >
