--- a/index.html
+++ b/index.html
@@ -20,4 +20,31 @@
         <li>a star warrior</li>
 
     </o1>
-    <img src ="https://th.bing.com/th/id/R.55afeb8eb09c8848003e5ae89511fea8?rik=3htv3%2bjpZZKi3A&riu=http%3a%2f%2fwww.pngall.com%2fwp-content%2fuploads%2f2016%2f05%2fKirby-Free-Download-PNG.png&ehk=jzL8Pfbva5NzzS6Y%2fM4k5s5Deq639hKSf2Aq0hPwvxo%3d&risl=&pid=ImgRaw&r=0" >
+    <img src ="https://th.bing.com/th/id/R.55afeb8eb09c8848003e5ae89511fea8?rik=3htv3%2bjpZZKi3A&riu=http%3a%2f%2fwww.pngall.com%2fwp-content%2fuploads%2f2016%2f05%2fKirby-Free-Download-PNG.png&ehk=jzL8Pfbva5NzzS6Y%2fM4k5s5Deq639hKSf2Aq0hPwvxo%3d&risl=&pid=ImgRaw&r=0" width="100" height="100" >
+    <form>
+        <label for="Username">username:</label>
+        <input type="text"name="" id="username">
+        <br></br>
+        <label for="YourPassword">Password:</label>
+        <input type="Password"name="" id="Password">
+        <br></br>
+        <label for="Email">Email: </label>
+        <input type="Email" name="" id="Email">
+        <br></br>
+        <label for="color">Choose a color: </label>
+        <input type="color" name="" id="color">
+        <br></br>
+        <label for="date">date: </label>
+        <input type="date" name="" id="Date">
+        <br></br>
+        <label for="Male">Male </label>
+        <input type="radio" name="Gender" id="Male">
+        <label for="Female">Female </label>
+        <input type="radio" name="Gender" id="Female">
+        <label for="Transgender">Transgender </label>
+        <input type="radio" name="Gender" id="Transgender">
+        <br></br>
+        <input type="number" name="" id="">
+        <br></br>
+        <input type="submit" value="submit">
+    </form>
