--- a/e-kart/index.html
+++ b/e-kart/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Fluffi</title>
+    <title>F L U F F I E Z</title>
 </head>
 <body>
     <div id="nav">
@@ -12,6 +12,7 @@
         <a class ="anchor" href="#"> about&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
         <a class ="anchor" href="#"> product&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
         <a class ="anchor" href="#"> cast&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+        <a class ="anchor" href="http://127.0.0.1:5500/e-kart/contact.html"> contact us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
     </div>
     
 
@@ -42,9 +43,9 @@
     <button> Buy Now! </button>
     </div>
 
-    <img src="https://media1.tenor.com/images/78d39cc8617b3e20713a336e307644d9/tenor.gif?itemid=14240867" width="100" height ="100">
 
-    <p class ="spacing-out">~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
-    
-</body>
-</html>
+    <p class ="spacing-out">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+
+
+    </body>
+    </html>
