--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -6,14 +6,41 @@
     <title>Javascript Basics</title>
     
 </head>
-<body>
+<body class = "body">
 
    
-    <h1 class="heading">Laura Nguyen</h1>
-    <h1 id="heading1">10 years old</h1>
+    <h1 class="heading">⛧🐈‍⬛₊˚ʚ ᗢ₊˚✧ ﾟ.</h1>
+    <h1 id="heading1">blog!</h1>
+    <div class = "kirby">
+        <img src = "https://pa1.narvii.com/5811/881b62d24c1dac16351e9df854db81743470159b_hq.gif" width = 220  height = 200>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;kirby jump</p>
+    </div>
 
+    <div class = "kirby">
+        <img src = "https://pa1.narvii.com/5631/f401caaa43eb3f7e7cdbffc0ddd247475ffd5515_hq.gif"  width = 220  height = 200>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;kirby surf</p>
+    </div>
 
+    <div class = "kirby">
+        <img src = "https://i.gifer.com/origin/55/55e914e2ff3bf83d66c4b318504a3877_w200.gif" width = 220  height = 200>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;kirby fly</p>
+    </div>
 
+    <div class = "kirby">
+        <img src = "https://24.media.tumblr.com/tumblr_m8pim6R48e1qgzgz6o1_500.gif" width = 220  height = 200>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;kirby game</p>
+    </div>
+    <div class = "kirby">
+        <img src = "https://i.pinimg.com/originals/a3/c7/0e/a3c70e62f5596ce306e8069d4a73d824.gif" width = 220  height = 200>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;kirby sleep</p>
+    </div>
+
+    <div class = "kirby">
+        <img src = "https://giffiles.alphacoders.com/163/163703.gif" width = 220  height = 200>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;kirby afk</p>
+    </div>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
