--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -8,12 +8,29 @@
 </head>
 <body>
 
+    <img src  = "https://www.freepnglogos.com/uploads/netflix-logo-drawing-png-19.png"  width = 161 height = 44 id = "logo">
+
+<select class="form-select" aria-label="Default select example">
+        <option selected>Select Language...</option>
+        <option value="1">English</option>
+        <option value="2">español</option>
+      </select>
+
     <button class = "button_SignIn">Sign In</button>
+
+
 
 <h1 id = "text"><b>Unlimited movies, TV shows, and more</b></h1>
 <p id = "text_2">Watch anywhere. Cancel anytime.</p>
-
 <p id = "text_3">Ready to watch? Enter your email to create or restart your membership.</p>
+
+<div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon1">@</span>
+    <input type="Email" class="form-control" placeholder="Email address" aria-label="Email address" aria-describedby="basic-addon1">
+  </div>
+
+<button class = "button_GetStarted">Get Started ></button>
+
 
 
 </body>
