:C:/Program Files/Git/

--- a/Fanta/index.html
+++ b/Fanta/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fanta.css">
+    <title>Fruit Flavored Sodas | Fanta® </title>
+    <link rel="shortcut icon" href="images/website_logo.png" type="image/x-icon">
 </head>
 <body class = "body">
 <div class = "fantaa">
-    <img src = "https://www.fanta.com/content/dam/nagbrands/us/fanta/en/home/IMG_FantaLogo_Nav_MO@2x.png" id = "logo">
-
+        <img src = "https://www.fanta.com/content/dam/nagbrands/us/fanta/en/home/IMG_FantaLogo_Nav_MO@2x.png" id = "logo">
     <a href="#" class = "productA">Products</a>
     <a href="#" class = "productA">Shop Now</a>
     
