--- a/Netflix/index.html
+++ b/Netflix/index.html
@@ -6,7 +6,7 @@
     <title>Netflix</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class = "body">
 
     <img src  = "https://www.freepnglogos.com/uploads/netflix-logo-drawing-png-19.png"  width = 161 height = 44 id = "logo">
 
